[package]
name = "rshort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "3.2.8", features = ["derive"]} 
tokio = { version = "1.12.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
termion = "1.5.6"
anyhow = "1.0.58"
confy = "0.4.0"
chrono = {version = "0.4.19", features = ["serde"]}
